Added git support. Fixed typo in bazaar.py and made a generic package maintainer name for suitcase.yml

--- a/suitcase/suitcase.yml
+++ b/suitcase/suitcase.yml
@@ -7,4 +7,4 @@ path_exclusions: ['tests']
 build_exclusions: ['debdiff']
 collections:
     default:   
-        maintainer: Alex Knowles <alex.knowles@thisisglobal.com>
+        maintainer: Name <name@example.com>
